[gd_scene load_steps=18 format=3]

[ext_resource type="Script" path="res://GameUI.gd" id="1_script"]
[ext_resource type="PackedScene" path="res://FinalBoard.tscn" id="2_final"]

[sub_resource type="Gradient" id="Gradient_bg"]
colors = PackedColorArray(0.1, 0.05, 0, 1, 0, 0, 0.2, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bg"]
gradient = SubResource("Gradient_bg")
fill_from = Vector2(0, 0)
fill_to = Vector2(1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panels"]
bg_color = Color(1, 0.5, 0, 0.2)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.7, 0.2, 0.5)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_board_frame"]
bg_color = Color(0.9, 0.7, 0.4, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.2, 0.1, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0, 0, 0, 0.5)
shadow_size = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_board_inner"]
bg_color = Color(0, 0.2, 0.6, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0.5, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_desk_A"]
bg_color = Color(0.4, 0.2, 0.1, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.8, 0.6, 0.4, 1)
corner_radius_top_left = 80
corner_radius_top_right = 80
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 15
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_front_A"]
bg_color = Color(0, 0.3, 0.8, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.2, 0.6, 1, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_desk_B"]
bg_color = Color(0.4, 0.2, 0.1, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.8, 0.6, 0.4, 1)
corner_radius_top_left = 80
corner_radius_top_right = 80
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 15
shadow_offset = Vector2(-5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_front_B"]
bg_color = Color(0, 0.3, 0.8, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.2, 0.6, 1, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Gradient" id="Gradient_floor"]
colors = PackedColorArray(0.3, 0.15, 0.05, 1, 0.1, 0.05, 0.02, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_floor"]
gradient = SubResource("Gradient_floor")
fill = 2
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_overlay"]
bg_color = Color(0, 0, 0, 0.7)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_score"]
bg_color = Color(0, 0, 0, 0.5)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.8, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Gradient" id="Gradient_wall"]
offsets = PackedFloat32Array(0, 0.47, 1)
colors = PackedColorArray(0.8, 0.4, 0, 0.3, 0, 0.3, 0.8, 0.3, 0.8, 0.4, 0, 0.3)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wall"]
gradient = SubResource("Gradient_wall")
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_podium"]
bg_color = Color(0.1, 0.1, 0.1, 1)
border_width_top = 5
border_color = Color(0.5, 0.5, 0.5, 1)

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_bg")

[node name="WallPanels" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="P1" type="Panel" parent="WallPanels"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_panels")

[node name="P2" type="Panel" parent="WallPanels"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_panels")

[node name="P3" type="Panel" parent="WallPanels"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_panels")

[node name="P4" type="Panel" parent="WallPanels"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_panels")

[node name="P5" type="Panel" parent="WallPanels"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_panels")

[node name="WallOverlay" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_wall")

[node name="Floor" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("GradientTexture2D_floor")

[node name="CentralPodium" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_podium")

[node name="FaceOffContainer" type="HBoxContainer" parent="CentralPodium"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 150
alignment = 1

[node name="BoardArea" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -420.0
offset_right = 450.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_board_frame")

[node name="BoardInner" type="Panel" parent="BoardArea"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_board_inner")

[node name="VBox" type="VBoxContainer" parent="BoardArea/BoardInner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="RoundScore" type="HBoxContainer" parent="BoardArea/BoardInner/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="BoardArea/BoardInner/VBox/RoundScore"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_font_sizes/font_size = 28
text = "PULA:"

[node name="Score" type="Label" parent="BoardArea/BoardInner/VBox/RoundScore"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "0"

[node name="AnswerContainer" type="VBoxContainer" parent="BoardArea/BoardInner/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HostSpot" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -340.0
offset_right = 75.0
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 0

[node name="BottomInfo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -600.0
offset_top = -140.0
offset_right = 600.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Oczekiwanie..."
horizontal_alignment = 1
autowrap_mode = 3

[node name="TeamStation_A" type="Control" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = -350.0
offset_right = 580.0
offset_bottom = -50.0
grow_vertical = 0

[node name="Avatars" type="HBoxContainer" parent="TeamStation_A"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -280.0
offset_right = -30.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = -25
alignment = 1

[node name="Desk" type="Panel" parent="TeamStation_A"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_desk_A")

[node name="FrontPanel" type="Panel" parent="TeamStation_A/Desk"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_front_A")

[node name="NameLabel" type="Label" parent="TeamStation_A/Desk/FrontPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Drużyna A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScorePanel" type="PanelContainer" parent="TeamStation_A/Desk"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = -15.0
offset_right = 60.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_score")

[node name="Label" type="Label" parent="TeamStation_A/Desk/ScorePanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1

[node name="TeamStation_B" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -580.0
offset_top = -350.0
offset_right = -80.0
offset_bottom = -50.0
grow_horizontal = 0
grow_vertical = 0

[node name="Avatars" type="HBoxContainer" parent="TeamStation_B"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -280.0
offset_right = -30.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = -25
alignment = 1

[node name="Desk" type="Panel" parent="TeamStation_B"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_desk_B")

[node name="FrontPanel" type="Panel" parent="TeamStation_B/Desk"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_front_B")

[node name="NameLabel" type="Label" parent="TeamStation_B/Desk/FrontPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Drużyna B"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScorePanel" type="PanelContainer" parent="TeamStation_B/Desk"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = -15.0
offset_right = 60.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_score")

[node name="Label" type="Label" parent="TeamStation_B/Desk/ScorePanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1

[node name="StrikeOverlay" type="CenterContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="StrikeOverlay"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_overlay")

[node name="Label" type="Label" parent="StrikeOverlay"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 400
text = "X"

[node name="FinalBoard" parent="." instance=ExtResource("2_final")]
visible = false



